trying to fix calendar on mobile

--- a/src/components/Modal/Calendar.module.css
+++ b/src/components/Modal/Calendar.module.css
@@ -79,6 +79,7 @@ h1 {
 
 @media all and (max-width:540px) {
   .content {
-    width:350px
+    width:350px;
+    z-index: 1000;
   }
 }
